# sda5f_tutorials

./: CMakeLists.txt  LICENSE  README.md  docker-compose.yml
catkin_ws/src/sda5f_motion_plan/: CMakeLists.txt  package.xml
catkin_ws/src/sda5f_motion_plan/launch/: demo_display.launch  demo_pickplace.launch  demo_wavearms.launch
catkin_ws/src/sda5f_motion_plan/meshes/: container.stl  rack.stl
catkin_ws/src/sda5f_motion_plan/msg/: OnRobotRGInput.msg  OnRobotVGInput.msg
catkin_ws/src/sda5f_motion_plan/scripts/: demo_display_joint.py  demo_display_joint_fake.py  demo_pickplace_joint.py  demo_pickplace_joint_fake.py  demo_wavearms.py  demo_wavearms_fake.py  object_tf_publisher.py  onrobot.py
catkin_ws/src/sda5f_stack/: README.md
catkin_ws/src/sda5f_stack/motoman/: package.xml
catkin_ws/src/sda5f_stack/motoman_driver/: CMakeLists.txt  package.xml
catkin_ws/src/sda5f_stack/motoman_driver/launch/: .robot_interface_streaming.launch.swp  io_relay.launch  motion_streaming_interface.launch
catkin_ws/src/sda5f_stack/motoman_driver/tests/: roslaunch_test_io_relay.xml
catkin_ws/src/sda5f_stack/motoman_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/sda5f_stack/motoman_resources/: CMakeLists.txt  package.xml
catkin_ws/src/sda5f_stack/motoman_sda5f_support/: CMakeLists.txt  package.xml  visualize.rviz
catkin_ws/src/sda5f_tutorials/: CMakeLists.txt  README.md  package.xml
docker/sda5f/: Dockerfile  bringup.bash  wiggle.bash
launch/: pick_and_place.launch  pick_and_toss.launch  wiggle.launch
scripts/: pick_and_place.py  pick_and_toss.py  wiggle.py
utils/: sda5f_moveit_real.sh  sda5f_moveit_sim.sh  sda5f_pickplace.sh  sda5f_pickplace_fake.sh  sda5f_pp.sh  sda5f_pp_fake.sh  sda5f_rviz.sh  sda5f_wavearms.sh  sda5f_wavearms_fake.sh
(+43 files in other folders)
